kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: protobuddy
  labels:
    name: protobuddy
    app: protobuddy
